# enjoy-python

./: .gitignore  README.md  claude.md  commit_rewrite_script.py  final_cleanup_script.py  force_linearize.py  git_rewrite.sh  linearize_preserving_commits.py  pyproject.toml  requirements-test.txt  requirements.txt  ultimate_rebase_workflow.py
.claude/: settings.local.json
config/: posts.json
netebook/blog/: buddy.ipynb  like.ipynb
notebook/blog/: views.ipynb
src/: async_gather.py  compression.py  constants.py
src/blog/: add_buddy.py  add_buddy_search.py  add_like_buddy.py  add_like_buddy_added.py  add_like_recommend.py  add_like_search.py  add_reply_buddy.py  add_reply_buddy_added.py  add_reply_recommend.py  add_reply_url.py  extract_blog.py  extract_blog_by_url.py  like_by_buddy_added.py  like_by_recommend.py  like_by_search.py  reply_by_buddy.py  reply_by_buddy_added.py  reply_by_recommend.py  reply_by_url.py  search_for_mobile.py  search_for_pc.py  search_mobile.py  search_pc.py  thumbnail.py  utils.py
src/common/: llm.py  search.py  utils.py  webs.py
src/config/: configuration.py  variables.py
src/config/envs/: .env
src/config/meta/: posts.json
src/coroutine/: generator.py
src/enjoy_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/search/: generator.py
test/: test_async_gather.py  test_compression_libraries.py  test_compression_simple.py  test_configuration.py  test_kafka_consumer.py  test_ollama.py  test_pandas_join.py  test_search.py  test_thread_coroutine.py  test_webs.py  test_x.py  test_yield.py
